# twilio-chat-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
migrations/: 20230525214007_init.up.sql
src/: conversation_state.rs  db_types.rs  deepgram_types.rs  error.rs  handlers.rs  main.rs  openai_types.rs  tasks.rs  twilio_types.rs  types.rs  utils.rs
