[package]
name = "twilio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = [ "ws" ] }
base64 = "0.21"
dotenvy = "0.15"
futures-util = { version = "0.3", features = [ "sink" ] }
gcs-common = { package = "async-google-apis-common", version = "0.4" }
http = "0.2"
hyper = { version = "0.14", features = ["stream"] }
hyper-rustls = { version = "0.23", features = [ "http2", "rustls-native-certs" ] }
quick-xml = "0.22"
reqwest = { version = "0.11", features = [ "json", "rustls-tls", "stream" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_urlencoded = "0.7"
time = "0.3"
tokio = { version = "1", features = [ "fs", "macros", "rt-multi-thread", "sync", "time" ] }
tokio-tungstenite = { version = "0.18", features = [ "rustls-tls-native-roots" ] }
tokio-util = { version = "0.7", features = [ "io" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = [ "serde" ] }
xmlserde = "0.5"
xmlserde_derives = "0.5"
